--- a/package.json
+++ b/package.json
@@ -1,40 +1,34 @@
 {
-  "name": "nodebb-plugin-s3-uploads-updated",
-  "version": "0.3.13",
-  "description": "A plugin for NodeBB to take file uploads and store them on S3 updated for 1.0",
+  "name": "nodebb-plugin-upyun-uploads",
+  "version": "0.1.0",
+  "description": "A plugin for NodeBB to take file uploads and store them on Upyun",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/louiseMcMahon/nodebb-plugin-s3-uploads.git"
+    "url": "https://github.com/revir/nodebb-plugin-upyun-uploads.git"
   },
   "keywords": [
     "nodebb",
-    "s3",
-    "aws",
+    "upyun",
     "plugin",
     "uploads"
   ],
-  "author": "Micheil Smith <micheil@kano.me>",
-  "contributors": [
-    "Barış Soner Uşaklı <barisusakli@gmail.com>",
-    "Joseph Chen <joseph.chen@gmail.com>",
-    "louise McMahon <louise@louisemcmahon.co.uk>"
-  ],
+  "author": "River Yang <revir.qing@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/louiseMcMahon/nodebb-plugin-s3-uploads/issues"
+    "url": "https://github.com/revir/nodebb-plugin-upyun-uploads/issues"
   },
   "nbbpm": {
     "compatibility": "^1.0.0"
   },
   "dependencies": {
-    "aws-sdk": "^2.0.23",
-    "uuid": "~1.4.1",
-    "mime": "~1.2.11",
-    "request": "~2.69.0",
-    "gm": "~1.21.1"
+    "upyun": "^2.0.4",
+    "uuid": "~3.0.1",
+    "mime": "~1.3.4",
+    "request": "~2.79.0",
+    "gm": "~1.23.0"
   }
 }
